# sdf-utility

./: README.md
sdf-utility/: mainwindow.ui  sdf-utility.pro
ui/: CMakeLists.txt  SdfGeneratorWidget.cpp  SdfGeneratorWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  svgview.cpp  ui.pro
